--- a/frontend/styles/fonts.css
+++ b/frontend/styles/fonts.css
@@ -1,5 +1,5 @@
-/* @font-face {
-	font-family: 'HaasGrot';
-	src: url('/fonts/HaasGrotDisp-55Roman.woff2') format('woff2'), url('/fonts/HaasGrotDisp-55Roman.woff') format('woff'), url('/fonts/HaasGrotDisp-55Roman.ttf') format('truetype'), url('/fonts/HaasGrotDisp-55Roman.otf') format('opentype');
+@font-face {
+	font-family: 'Monument Grotesk';
+	src: url('/fonts/MonumentGrotesk-Regular.woff') format('woff'), url('/fonts/MonumentGrotesk-Regular.ttf') format('truetype'), url('/fonts/MonumentGrotesk-Regular.otf') format('opentype');
 	font-display: swap;
-} */
+}
